--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,4 +86,4 @@ jobs:
           # Для каждого пересобранного образа
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: alexYa56/taski_backend:latest
+          tags: alexya56/taski_backend:latest
